# biblos

./: .env.example  .gitignore  Cargo.toml  README.md  Settings.toml
migrations/: 20240423114014_add_user_table.sql
src/: app_state.rs  entity.rs  lib.rs  main.rs  settings.rs
src/api/: api_result.rs  mod.rs  server.rs
src/auth/: mod.rs
