[package]
name = "biblos"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused = "allow"

[dependencies]

axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.12"
