[package]
name = "biblos"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.12"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
] }
